[tool.poetry]
name = "financify-api"
version = "0.1.0"
description = "A flask_restul app for learning REST"
authors = ["Jonathan Cook <jcookbme@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
runapp = "financify_api.__app__:main"
setup = "financify_api.__setup__:main"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
flask = "^3.0.2"
requests = "^2.31.0"
flask-restful = "^0.3.10"
pytest = "^8.2.0"
setuptools = "^70.2.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}
isort = {extras = ["colors"], version = "^5.11.4"}
toml = "^0.10.2"
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 88
color = true
exclude = "autogen"

[tool.isort]
py_version = 310
line_length = 88
profile = "black"
color_output = true
indent = 4

