[tool.poetry]
name = "restful-budget-api"
version = "0.1.0"
description = "A flask_restul app for learning REST"
authors = ["Jonathan Cook <jcookbme@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
runapp = "restful_budget_api.__app__:main"
setup = "restful_budget_api.__setup__:main"
ci = "restful_budget_api.__ci__:main"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
flask = "^3.0.2"
requests = "^2.31.0"
flask-restful = "^0.3.10"
pytest = "^8.2.0"
setuptools = "^70.2.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}
isort = {extras = ["colors"], version = "^5.11.4"}
ipython = "*"
tox = "^4.16.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 79
color = true

[tool.isort]
py_version = 310
line_length = 79
profile = "black"
color_output = true
indent = 4

