[tool.poetry]
name = "restful-budget-api"
version = "0.1.0"
description = "A flask_restul app for learning REST"
authors = ["Jonathan Cook <jcookbme@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
runapp = "restful_budget_api.__app__:main"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "*"